# kocotree-skills

./: README.md
skills/design-kocotree-ui/: SKILL.md
skills/design-kocotree-ui/agents/: openai.yaml
skills/design-kocotree-ui/references/: design-system.md
skills/multi-platform-image-processor/: SKILL.md
skills/multi-platform-image-processor/references/: agent_visual_tasks.md  output_contract.md  platform_rules.md  quality_checks.md
skills/multi-platform-image-processor/scripts/: build_tmall_master.py  common.py  derive_cbme.py  derive_fengxiang_aikucun.py  derive_jd.py  derive_offsite.py  derive_vip.py  detail_page_slice.py  image_resize_compress.py  logo_overlay.py  main.py  (+7 more)
skills/sku-image-processor/: SKILL.md
skills/sku-image-processor/scripts/: main.py  pyproject.toml
skills/sku-image-processor/scripts/annotation/: __init__.py  check.py  review.py  tasks.py
skills/sku-image-processor/scripts/core/: annotations.py  auth.py  config.py  export.py  geometry.py  output_layout.py  retention.py  utils.py
skills/sku-image-processor/scripts/model/: common.py  fill_model.py  place.py
skills/sku-image-processor/scripts/pipeline/: prep.py  render.py
skills/sku-image-processor/scripts/pose/: __init__.py  annotation.py  detector.py  pipeline.py  schema.py  visualize.py
skills/sku-image-processor/scripts/product/: product_render.py
skills/sku-image-processor/scripts/qa/: grid.py  preview.py  validation.py
skills/sku-image-processor/scripts/template/: template.py
skills/text2image/: SKILL.md
skills/visual-detail-image-processor/: SKILL.md
(+41 files in other folders)
