[project]
name = "sku-image-processor"
version = "0.1.0"
description = "Generate apparel SKU delivery images from templates, model photos, and transparent product images."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "ultralytics>=8.3.0",
]

[tool.uv]
package = false
